--- a/rapport_projet.tex
+++ b/rapport_projet.tex
@@ -1,6 +1,4 @@
 \documentclass[a4paper, 12pt]{article}
-\usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
 \usepackage[french]{babel}
 \usepackage{libertine}
 \usepackage{setspace}
@@ -10,58 +8,98 @@
 \usepackage{listings}
 \usepackage{graphicx}
 \usepackage{fancyhdr}
-\renewcommand{\footrulewidth}{1pt}
-\fancyfoot[R]{Conrath Matthieu}
-\onehalfspacing
+% Une ligne commentaire débute par le caractère « % »
+
+\documentclass[a4paper]{article}
+
+% Options possibles : 10pt, 11pt, 12pt (taille de la fonte)
+%                     oneside, twoside (recto simple, recto-verso)
+%                     draft, final (stade de développement)
+
+\usepackage[utf8]{inputenc}   % LaTeX, comprends les accents !
+\usepackage[T1]{fontenc}      % Police contenant les caractères français 
+
+
+\usepackage[a4paper,left=2cm,right=2cm]{geometry}% Format de la page, réduction des marges
+\usepackage{graphicx}  % pour inclure des images
+
+%\pagestyle{headings}        % Pour mettre des entêtes avec les titres
+                              % des sections en haut de page
+
+ \title{         % Les paramètres du titre : titre, auteur, date
+  Projet de programmation}          
+\author{Groupe \emph{XXX}\\
+  \emph{François, Paul et les autres}\\
+    L2 informatique\\
+  Faculté des Sciences\\
+Université de Montpellier.}
+        
+
+
 \begin{document}
-\begin{titlepage}
-  \begin{sffamily}
-  \begin{center}
-  
+\centerline{\Huge\bf HAI405I}
+\vspace*{1.5cm}
+\begin{center}               % pour centrer 
+	
+	\framebox[8cm]{
+  %\includegraphics[width=10cm]{logo.pdf}   % insertion d'une image
+	ici un logo si vous le souhaitez.
+	}
 
-%ici on ajoute les images sur la même ligne (j'ai mis des images mais je pense que ça ne fonctionnera pas de votre côté pour l'instant)
-\begin{minipage}[c]{.46\linewidth}
-     \begin{center}
-             \includegraphics[width=4cm]{logo-fds.png}
-         \end{center}
-   \end{minipage} \hfill
-   \begin{minipage}[c]{.46\linewidth}
-    \begin{center}
-            \includegraphics[width=4cm]{fsd.png}
-        \end{center}   
- \end{minipage}
- \newline\newline
- 
-\textsc{\LARGE Faculté Des Sciences - Montpellier}\\[2cm]
-\textsc{\Large Rapport projet N°1}\\[2cm]
+\end{center}
+\vspace*{1.5cm}
 
-  \begin{minipage}{0.4\textwidth}
-      \begin{flushleft} \large
-       Conrath Matthieu\\
-        Chevalier Clément\\
-      \end{flushleft}
-    \end{minipage}
-    \begin{minipage}{0.4\textwidth}
-      \begin{flushright} \large
-        Pavie-Routaboul Clément\\
-        Rebagliato Lucas\\
-      \end{flushright}
-    \end{minipage}
+\fbox{\centerline{\Huge Projet de programmation}}
 
-   
-    \vfill
-    {\large 11 Janvier 2023}
-\newline
-{\url{https://github.com/CPavieR/projet-jeux}}
+\vspace*{1.5cm}
 
-  \end{center}
-  \end{sffamily}
-\end{titlepage}
+\noindent{\large\bf Groupe XXX :}
 
+\begin{itemize}
+\item toto 1
+\item toto 2
+\item toto 3
+\item toto 4
+\end{itemize}
+\vspace*{1.5cm}
+\begin{center}
+  L2 informatique\\
+  Faculté des Sciences\\
+Université de Montpellier.
+\end{center}
 
-\renewcommand\contentsname{Sommaire}
-\tableofcontents
 \newpage
+Le nombre de pages s'entend en police de taille 11, sans compter les figures tout en restant lisible.
+
+\section{Organisation}
+
+Organisation et répartition du travail au cours du temps et dans l'équipe incluant les outils de collaboration utilisés  (environ une page).
+
+\section{Cahier des charges}
+
+Présentation succinte  de ce qui a été fait/pas fait/buggué par rapport au cahier des charges initiales et éventuellement extensions (environ une page).
+
+\section{Architecture et choix techniques}
+
+1 à 2 page(s) 
+\begin{itemize}
+\item Architecture du projet
+\item Choix technologiques  avec leurs justifications (pourquoi ce choix, comment il a été fait, par qui...),
+\end{itemize}
+
+    
+\section{Détail}
+
+Explication technique de deux ou trois points (1 à 3 pages max)
+\begin{description}
+\item[Obligatoire] Comment se fait la récupération des réponses et l'affichage en direct sur le poste enseignant,
+\item[Au choix] Un ou deux  points techniques supplémentaires.  
+\end{description}
+
+\section{Bilan}
+
+Bilan et analyse rétrospective et difficultés rencontrées (environ une page). Ce bilan peut aborder à la fois les aspects organisationnels et techniques.
+
+    \end{document}
 
 
-\end{document}
