--- a/rapport_projet.tex
+++ b/rapport_projet.tex
@@ -41,10 +41,9 @@ Université de Montpellier.}
 \vspace*{1.5cm}
 \begin{center}               % pour centrer 
 	
-	\framebox[8cm]{
-  %\includegraphics[width=10cm]{logo.pdf}   % insertion d'une image
-	ici un logo si vous le souhaitez.
-	}
+	
+  \includegraphics[width=5cm]{logo-fds.png}   % insertion d'une image
+	
 
 \end{center}
 \vspace*{1.5cm}
@@ -53,14 +52,16 @@ Université de Montpellier.}
 
 \vspace*{1.5cm}
 
-\noindent{\large\bf Groupe XXX :}
+\noindent{\Large\bf Groupe 20 :}\\ \\
 
-\begin{itemize}
-\item toto 1
-\item toto 2
-\item toto 3
-\item toto 4
+\begin{itemize}\large
+\item Chevalier Clement\large
+\item Conrath Matthieu\large
+\item Pavie--Routaboul Clément\large
+\item Rebagliato Lucas\large
 \end{itemize}
+\\
+\\
 \vspace*{1.5cm}
 \begin{center}
   L2 informatique\\
@@ -101,5 +102,3 @@ Explication technique de deux ou trois points (1 à 3 pages max)
 Bilan et analyse rétrospective et difficultés rencontrées (environ une page). Ce bilan peut aborder à la fois les aspects organisationnels et techniques.
 
     \end{document}
-
-
