--- a/rapport_projet.tex
+++ b/rapport_projet.tex
@@ -74,11 +74,15 @@ Le nombre de pages s'entend en police de taille 11, sans compter les figures tou
 
 \section{Organisation}
 
-Organisation et répartition du travail au cours du temps et dans l'équipe incluant les outils de collaboration utilisés  (environ une page).
+\subsection{Outils}
+Pour notre projet on a utiliser différent outils. Tout d'abord pour on a utiliser un espace de dépot pour notre code. Etant donné que tout les membres du groupe connaissaient et s'avait utilisé Github avant même le début du projet, Github à donc été choisit intuitivement. Ensuite vient le moment des logiciels sur lequelle nous allions travailler. Etant donné que l'on était habitué à travailler avec Visual Studio Code et VScodium alors ce choix à aussi été naturelle. En plus Visual Studio Code et VScodium possède tout deux une intégration de github et de python ce qui facilite l'écriture ainsi que la mise en commun des travaux.
 
+ajout de figure pours vscode et github
+\subsection{Organisation du travail}
+Nous nous somme au départ du second projet répartit la travail de la facon suivante: Clément Chevalier s'occuperait dans un premier temps de la gestion des étiquette, Rebagliato Lucas et Pavie--Routaboul Clément s'occuperai des séquences des questions et des comptes étudiants, ils seront rejoint par Clément Chevalier lorsque qu'il aurra terminé ca partie. Et Conrath Matthieu s'occupera de l'écriture et de la récupération des donneés dans les csv.
 \section{Cahier des charges}
 
-Présentation succinte  de ce qui a été fait/pas fait/buggué par rapport au cahier des charges initiales et éventuellement extensions (environ une page).
+Avant de commencer l'on doit rappeler ce qui a été fait durant la première étape du projet. Nous avons permis la création de compte ainsi que la création et la visulisation de questions et de feuilles de question. Cepandent nous avions pas permis à l'utilisateur d'utiliser les étiquettes déja existantes. Ainsi la première étape à faire et des réglers ce petit problème.
 
 \section{Architecture et choix techniques}
 
