--- a/rapport_projet.tex
+++ b/rapport_projet.tex
@@ -32,7 +32,7 @@
   \emph{François, Paul et les autres}\\
     L2 informatique\\
   Faculté des Sciences\\
-Université de Montpellier.}
+Université de Montpellier}
         
 
 
@@ -70,7 +70,6 @@ Université de Montpellier.
 \end{center}
 
 \newpage
-Le nombre de pages s'entend en police de taille 11, sans compter les figures tout en restant lisible.
 
 \section{Organisation}
 
@@ -79,7 +78,10 @@ Pour notre projet on a utiliser différent outils. Tout d'abord pour on a utilis
 
 ajout de figure pours vscode et github
 \subsection{Organisation du travail}
-Nous nous somme au départ du second projet répartit la travail de la facon suivante: Clément Chevalier s'occuperait dans un premier temps de la gestion des étiquette, Rebagliato Lucas et Pavie--Routaboul Clément s'occuperai des séquences des questions et des comptes étudiants, ils seront rejoint par Clément Chevalier lorsque qu'il aurra terminé ca partie. Et Conrath Matthieu s'occupera de l'écriture et de la récupération des donneés dans les csv.
+Nous nous somme au départ du second projet répartit la travail de la facon suivante: Clément Chevalier s'occuperait dans un premier temps de la gestion des étiquette, Rebagliato Lucas et Pavie--Routaboul Clément s'occuperai des séquences des questions et des comptes étudiants, ils seront rejoint par Clément Chevalier lorsque qu'il aurra terminé ca partie. Et Conrath Matthieu s'occupera de l'écriture et de la récupération des donneés dans les csv(historique et enregistrement des étudiants).
+\subsection{Déroulement du projet dans le temps}
+Ainsi l'on commenca rapidement par réaliser la création des comptes étudiants. Conrath Matthieu s'occupa de l'enregistrement, la récupération et la modification des comptes étudiants. Dans le même temps Pavie--Routaboul Clément et Rebagliato Lucas s'occuperent de mettre en place la récupération d'un fichier csv ainsi que de la connexion d'un étudiant à son compte. Ensuite Conrath Matthieu à réaliser l'écriture et la lecture des fichiers d'historique pendant que Pavie--Routaboul Clément et Rebagliato Lucas s'occuperent des séquences et des questions en direct. De son côté Chevalier Clément corriga la manière dont les étiquettes était crée lors de la création des questions.   
+
 \section{Cahier des charges}
 
 Avant de commencer l'on doit rappeler ce qui a été fait durant la première étape du projet. Nous avons permis la création de compte ainsi que la création et la visulisation de questions et de feuilles de question. Cepandent nous avions pas permis à l'utilisateur d'utiliser les étiquettes déja existantes. Ainsi la première étape à faire et des réglers ce petit problème.
