--- a/rapport_projet.tex
+++ b/rapport_projet.tex
@@ -108,8 +108,8 @@ connexion d'un étudiant à son compte. Ensuite Conrath Matthieu à réaliser
 l'écriture et la lecture des fichiers d'historique pendant que Pavie--Routaboul
 Clément et
 Rebagliato Lucas s'occuperent des séquences et des questions en direct. De son 
-côté Chevalier Clément corriga la manière dont les étiquettes était crée lors
-de la création des questions.   
+côté Clément Chevalier corriga la manière dont les étiquettes était crée lors
+de la création des questions ainsi que leurs modification.
 
 \section{Cahier des charges}
 
