--- a/rapport_projet.tex
+++ b/rapport_projet.tex
@@ -40,10 +40,10 @@ Université de Montpellier}
 \centerline{\Huge\bf HAI405I}
 \vspace*{1.5cm}
 \begin{center}               % pour centrer 
-	
-	
+ 
+ 
   \includegraphics[width=5cm]{logo-fds.png}   % insertion d'une image
-	
+ 
 
 \end{center}
 \vspace*{1.5cm}
@@ -55,7 +55,7 @@ Université de Montpellier}
 \noindent{\Large\bf Groupe 20 :}\\ \\
 
 \begin{itemize}\large
-\item Chevalier Clement\large
+\item Chevalier Clément\large
 \item Conrath Matthieu\large
 \item Pavie--Routaboul Clément\large
 \item Rebagliato Lucas\large
@@ -74,77 +74,95 @@ Université de Montpellier.
 \section{Organisation}
 
 \subsection{Outils}
-Pour notre projet on a utiliser différent outils. Tout d'abord pour on a 
-utiliser un espace de dépot pour notre code. Etant donné que tout les membres 
-du groupe
-connaissaient et s'avait utilisé Github avant même le début du projet, 
-Github à donc été choisit intuitivement.Ensuite vient le moment des logiciels 
-sur lequelle nous
-allions travailler. Etant donné que l'on était habitué à travailler avec 
-Visual Studio Code et VScodium alors ce choix à aussi été naturelle. 
-En plus Visual Studio
-Code et VScodium possède tout deux une intégration de github et de python ce 
-qui facilite l'écriture ainsi que la mise en commun des travaux.
 
-ajout de figure pours vscode et github
+Pour notre projet, nous avons utilisé différents outils. Tout d'abord nous avons utilisé un espace de dépot pour notre code. 
+Etant donné que tous les membres du groupe connaissaient et savaient utiliser Github avant même le début du projet, Github a donc été choisi intuitivement. 
+Ensuite est venu le moment de choisir les logiciels sur lesquels nous allions travailler. 
+Etant donné que nous étions habitués à travailler avec Visual Studio Code et VScodium alors ce choix a aussi été naturel. 
+En plus de cela, Visual Studio Code et VScodium possèdent tous deux une intégration de github et de python,  ce qui facilite l'écriture ainsi que la mise en commun des travaux.
+
+ajout de figure pour vscode et github
+
 \subsection{Organisation du travail}
-Nous nous somme au départ du second projet répartit la travail de la facon 
-suivante: Clément Chevalier s'occuperait dans un premier temps de la gestion
-des étiquette,
-Rebagliato Lucas et Pavie--Routaboul Clément s'occuperai des séquences des 
-questions et des comptes étudiants, ils seront rejoint par Clément Chevalier
-lorsque qu'il
-aurra terminé ca partie. Et Conrath Matthieu s'occupera de l'écriture et de la
-récupération des donneés dans les csv(historique et enregistrement des 
-étudiants).
+
+Nous nous sommes au départ du second projet répartis le travail de la façon suivante: 
+\newline
+Chevalier Clément s'occuperait dans un premier temps de la gestion des étiquettes, Rebagliato Lucas et Pavie--Routaboul Clément s'occuperaient des séquences, des questions et des comptes étudiants.
+Ils seront rejoints par Clément Chevalier lorsqu'il aura terminé sa partie. 
+Et Conrath Matthieu s'occupera de l'écriture et de la récupération des données dans les csv (historique et enregistrement des étudiants).
+
 \subsection{Déroulement du projet dans le temps}
-Ainsi l'on commenca rapidement par réaliser la création des comptes étudiants.
-Conrath Matthieu s'occupa de l'enregistrement, la récupération et la 
-modification des
-comptes étudiants. Dans le même temps Pavie--Routaboul Clément et Rebagliato
-Lucas s'occuperent de mettre en place la récupération d'un fichier csv ainsi
-que de la
-connexion d'un étudiant à son compte. Ensuite Conrath Matthieu à réaliser 
-l'écriture et la lecture des fichiers d'historique pendant que Pavie--Routaboul
-Clément et
-Rebagliato Lucas s'occuperent des séquences et des questions en direct. De son 
-côté Chevalier Clément corriga la manière dont les étiquettes était crée lors
-de la création des questions.   
+
+Ainsi, nous avons rapidement commencé par réaliser la création des comptes étudiants.
+Conrath Matthieu s'est occupé de l'enregistrement, la récupération et la modification des comptes étudiants.
+Dans le même temps, Pavie--Routaboul Clément et Rebagliato Lucas se sont occupés de mettre en place la récupération d'un fichier csv ainsi que de la connexion d'un étudiant à son compte. 
+Ensuite Conrath Matthieu a réalisé l'écriture et la lecture des fichiers d'historique pendant que Pavie--Routaboul Clément et Rebagliato Lucas se sont occupés des séquences et des questions en direct. 
+De son côté, Chevalier Clément a corrigé la manière dont les étiquettes étaient créées lors de la création des questions.   
 
 \section{Cahier des charges}
 \subsection{Les modifications à apporter à la première partie du projet}
-Avant de commencer l'on doit rappeler ce qui a été fait durant la première étape
-du projet. Nous avons permis la création de compte ainsi que la création et la
-visulisation de questions et de feuilles de question. Cepandent nous avions pas
-proposé à l'utilisateur d'utiliser les étiquettes déja existantes. Ainsi la 
-première
-étape à faire et des réglers ce petit problème.
-\subsection{La seconde parti du projet}
-Concernant la seconde partie du projet nous avons effectuer de nombreuses tâches.
-Ainsi nous avons commencer par ajouter les comptes étudiants. Cela plûtot simple à effectuer. Cependant il à fallut adapter
-les anciennes routes du serveurs en conséquence afin d'empécher un élève d'utiliser les même fonctionnalités qu'un professeur.
-Il aurra aussi fallut créé une page de profil afin de dissocier élève d'un professeur. Enfin il aurra fallut ajouter l'accès
-à l'étudiant d'une pour modifier son mot de passe. \\Ensuite l'on a ajouter les séquences puis les questions en direct. Afin de
-stocker les séquences, un nouveau fichier csv à du être créé. Ensuite il a fallut créé des web socket afin de permet la 
-communication en direct entre plusieurs utilisateurs. Il a donc fallut récupérer les différents questions et organisé les 
-séquences pour pouvoir répondre à question à la suite. Ensuite la création des questions en direct fut beaucoup plus simple 
-car ayant déja été réaliser durant la création des séquences 
+
+Avant de commencer, nous devons rappeler ce qui a été fait durant la première étape du projet. 
+Nous avons permis la création de comptes ainsi que la création et la visualisation de questions et de feuilles de question. Cependant, nous n’avions pas proposé à l'utilisateur d'utiliser les étiquettes déjà existantes. Ainsi, la première étape à faire était de régler ce petit problème.
+
+\subsection{La seconde partie du projet}
+
+Concernant la seconde partie du projet, nous avons effectué de nombreuses tâches.
+Ainsi nous avons commencé par ajouter les comptes étudiants, ce qui était plutôt simple à effectuer puisque nous avions déjà pensé à la question lors de la première partie. 
+Cependant il a fallu adapter les anciennes routes du serveur en conséquence afin d'empêcher un élève d'utiliser les mêmes fonctionnalités qu'un professeur et inversement.
+Il nous a aussi fallu créer une page de profil afin de dissocier un élève d'un professeur. 
+Enfin il nous a également fallu ajouter l'accès à l'étudiant d'une page pour modifier son mot de passe (puisqu'à la création d'un compte étudiant, son identifiant est également son mot de passe). 
+\\Ensuite, nous avons ajouté les séquences puis les questions en direct. 
+Afin de stocker les séquences, un nouveau fichier csv a dû être créé. Ensuite il a fallu créer des web socket afin de permet la communication en direct entre plusieurs utilisateurs et les professeurs. Il a donc fallu récupérer les différentes questions et organiser les séquences pour pouvoir répondre à plusieurs questions à la suite. Ensuite, la création des questions en direct fut beaucoup plus simple, ayant déjà été réalisé durant la création des séquences (répondre à une question est donc la même chose que de répondre à une séquence qui n'a qu'une seule question). 
 
 \section{Architecture et choix techniques}
 
 \subsection{Architecture du projet}
-Le coté serveur de notre projet est soumis à de nombreuse dépendance. En effet, en plus des bibliothèques standards à python 
-comme os,haslib,time,datetime et csv nous avons aussi ajouter d'autre bibliothèques comme Flask, \\flask\_socketio,md\_mermaid 
-et markdownHTML. Cependant nous avons aussi des dépendances venant de fichiers que nous avons créé. Ainsi le fichier 
-serveur.py à besoin des fichiers manipulationQuestion.py qui permet de manipuler les ficher conservant les 
-questions,manipulationSequence.py qui permet de manipuler les fichiers conservant les séquences,manipulation\_Etu.py qui 
-permet de manipuler le fichier conservant les etudiants,manipulation\_User.py qui permet de manipuler le fichier conservant 
-les professeurs,markdownHTML.py qui permet de traduire du markdown,latex et mermaid en HTML  et enfin md\_mermaid qui permet
-aussi de traduire du texte en un code HTML. Ensuite le serveurs orchestre l'utilisation de toutes ces bibliothèques et fichiers
-afin d'obtenir les informations nécéssaire pour pouvoir générer les pages HTML. Ainsi le fichier serveur.py a un rôle centrale
-de notre projet.
 
+Le côté serveur de notre projet est soumis à de nombreuses dépendances.
+En effet, en plus des bibliothèques standards à python comme os, haslib, time, datetime et csv, nous avons aussi ajouté d'autres bibliothèques comme Flask, flask\_socketio, md\_mermaid et markdownHTML. 
+Cependant nous avons aussi des dépendances venant de fichiers que nous avons créés.
+Ainsi le fichier serveur.py a besoin des fichiers :
+\begin{itemize}
+    \item manipulationQuestion.py afin de manipuler les fichers conservant les questions
+    \item manipulationSequence.py pour manipuler les fichiers conservant les séquences
+    \item manipulation\_Etu.py qui permet de manipuler le fichier conservant les étudiants
+    \item manipulation\_User.py pour manipuler le fichier conservant les professeurs
+    \item markdownHTML.py afin de traduire du markdown, latex et mermaid en HTML
+    \item md\_mermaid qui permet aussi de traduire du texte en un code HTML
+\end{itemize}
+Ensuite le serveur orchestre l'utilisation de toutes ces bibliothèques et fichiers afin d'obtenir les informations nécessaires pour pouvoir générer les pages HTML. 
+Ainsi, le fichier serveur.py a un rôle central dans notre projet car toutes les informations y transitent.\\
+    Ensuite nous avons aussi toute une architecture au niveau des fichiers CSV. Tout d'abord nous avons les
+fichiers de questions qui sont nommé "question\_"+identifiant de l'utilisateur+".csv", ce fichier 
+sauvegarde ainsi toutes les questions d'un professeur. Puis nous avons "User.csv" qui permet de 
+sauveguarder les informations inhérent à un professeur. Ensuite il y a "ID\_Question.csv" qui
+permet de connaitre facilement quelle question à été créé et possède chaque professeur.
+Ensuite il y a "Sequence\_"+identifiant de l'utilisateur+".csv" qui permet de sauvegarder les séquences
+créée par un utilisateur."historique\_"+identifiant de l'utilisateur+".csv" permet lui de conserver les
+historique de chaque question d'un professeur. Enfin il y a "Etu.csv" quic onserve les informations pour chaque étudiant ainsi que leur historique associé.
 
+\subsection{Choix technologiques}
+
+Afin de réaliser notre projet nous avons dû réaliser de nombreux compromis et choix parmis les choix téchnologique et opérationnel.
+
+ \subsubsection{Utilisation de Flask\_socketIO}
+ 
+ \subsubsection{Utilisation de fichier CSV}
+ 
+ 
+ Afin de réaliser la sauvegarde des différentes questions, utilisateurs et historiques au cours du temps, il a fallu réaliser un choix dès le début du projet. 
+ Ainsi lors de la première partie du projet, l'utilisation de fichiers CSV semblait logique.
+ De plus le fait que Conrath Matthieu savait déjà utiliser les CSV avec python dès le début du projet a orienté ce choix technologique. 
+ Le fichier CSV a ainsi permis de stocker et accéder aux différentes informations simplement.
+ Cependant, l'utilisation de CSV s'est compliqué durant la seconde partie du projet à cause des historiques.
+ En effet l'ensemble des fichiers CSV n'ayant pas été prévu au départ pour contenir les historiques, une solution peu élégante a été utilisée. 
+ Ainsi les historiques sont été stockés dans deux fichiers différents afin de minimiser le temps d'accès pour, d'une part, la récupération de tous les historiques de questions pour un professeur, et de l'autre, l'accès à tout l'historique de réponses pour un élève donné. 
+ Cependant avec du recul deux possibilités d'amélioration.
+ La première piste d'amélioration demande de totalement revoir l'ensemble des contenus des fichiers CSV afin de minimiser le nombre d'accès et la redondance d'informations. 
+ La seconde piste d'amélioration consiste à abandonner l'utilisation de fichiers CSV pour passer sur une base de données SQL. Cependant, quelle que soit la solution choisie, elle nécessite de refaire une partie considérable du projet.
+ 
+ \subsubsection{Traduire le markdown,latex et mermaid}
 \begin{itemize}
 \item Architecture du projet
 \item Choix technologiques  avec leurs justifications (pourquoi ce choix, 
@@ -162,35 +180,33 @@ en direct sur le poste enseignant,
 
 \subsection{Récupération et affichage des questions en direct}
 
-Tout d'abord commencont par la récupération des questions depuis le fichier 
-csv. Etant donné que l'on possède l'identifiant du professeur ainsi que 
-l'identifiant de la question; On peut alors utilisé la fonction getQuestion qui
-prend un paramètre
-les deux identifiants précisé si-dessus. Afin de récupérer la question, il faut
-ouvir le fichier csv avec open en passant en paramètre le chemin absolue du
-fichier voulu (que l'on abregera en PATH) et r pour préciser un mode d'ouverture
-en écriture: 
+Tout d'abord, commençons par la récupération des questions depuis le fichier csv. 
+Etant donné que l'on possède l'identifiant du professeur ainsi que l'identifiant de la question, on peut alors utiliser la fonction getQuestion() qui prend un paramètre les deux identifiants précisés ci-dessus. 
+Afin de récupérer la question, il faut ouvrir le fichier csv avec open() en passant en paramètre le chemin absolu du fichier voulu (que l'on abrégera en PATH) et w (write) pour préciser un mode d'ouverture en écriture: 
+
 \begin{lstlisting}
  with open(PATH,'r') as FILE:
 \end{lstlisting}
-Ensuite afin de lire un csv il nous faut utiliser un fonction de la bibliothèque
-csv nommé reader qui nous donne un objet que l'on peut lire comme un liste de 
-liste de chaine de charactère
+
+Ensuite afin de lire un csv il nous faut utiliser une fonction de la bibliothèque
+csv nommée reader() qui nous donne un objet que l'on peut lire comme une liste de 
+liste de chaînes de caractères
+
 \begin{lstlisting}
  lecture=csv.reader(FILE,delimiter=';')
  ListeQuestion=[]
  for ligne in lecture:
     ListeQuestion.append(ligne)
 \end{lstlisting}
-Ici l'on stocke le contenue de lecture dans une véritable liste car lecture
-ne peut pas être lue via les indices. Ici le seul moyen de lire convenablement
-notre fichier est d'utilisé une boucle for du type "for i in liste:". \\
-Ensuite il nous reste plus qu'a formaté les listes. Pour rappel dans les 
-fichiers contenant les questions ainsi que leur réponse est de la forme:\\
+
+Ici, on stocke le contenu de lecture dans une véritable liste car lecture
+ne peut pas être lue via les indices. 
+Ici le seul moyen de lire convenablement notre fichier est d'utiliser une boucle for du type "for i in liste:". \\
+Ensuite il ne nous reste plus qu'à formater les listes. 
+Pour rappel, les fichiers contenant les questions ainsi que leur réponse est de la forme: \\
 Id;ET1;ET2;ET3;...;FINET;Question;REP1;REP2;...;FINREP;BREP1;BREP2;...\\
 (ET=étiquette REP=réponse BREP=Bonne réponse).
-Enfin il suffit de parcourir les questions est de comparés leurs identifiants 
-avec celui passé en paramètre. 
+Enfin, il suffit de parcourir les questions et de comparer leurs identifiants avec celui passé en paramètre. 
 
 \item[Au choix] Un ou deux  points techniques supplémentaires.  
 \end{description}
